Shaky Knees - fixes logo not being responsive for live portal.
Changes logo to 'max-width' instead of 'min-width', it was not responsive.

--- a/portals/child-portals/noLRG/49553/49553.css
+++ b/portals/child-portals/noLRG/49553/49553.css
@@ -628,16 +628,6 @@ input[type=file] {
     display: none !important;
 }
 
-.SearchHotels .ArnSortByName,
-.SearchHotels .ArnSortByClass,
-.SearchHotels .ArnSortByType,
-.SearchHotels .ArnSortByPrice,
-.SearchHotels .ArnSortByAvailability,
-.SearchHotels .ArnSortByDealPercent,
-.SearchHotels .ArnSortByDealAmount,
-.SearchHotels .ArnSortByVacationRental,
-.SearchHotels .ArnSortByDistance {}
-
 .ArnSortByVacationRental {
     display: none !important;
 }
